-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
Ubuntu 11.04 x86 64-bit
qtbase#master c3d9d3698674a2240aa97403e3b684894d6f19db
********* Start testing of tst_QListView ********* Config: Using QTest library 5.0.0, Qt 5.0.0 PASS : tst_QListView::initTestCase() FAIL! : tst_QListView::taskQTBUG_2233_scrollHiddenItems(LeftToRight) Compared values are not the same Actual (bar->maximum()): 48 Expected (rowCount/4 - nbVisibleItem): 49 Loc: [tst_qlistview.cpp(1873)] PASS : tst_QListView::cleanupTestCase() Totals: 2 passed, 1 failed, 0 skipped ********* Finished testing of tst_QListView *********
- is required for
-
QTBUG-25005 Critical issues for Qt5 Beta 1
-
- Closed
-